visuele weergave going!

--- a/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
+++ b/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
@@ -2,7 +2,8 @@
   <header>
     <div class="title">
       <h2>
-          <a [ngClass]="{'color-dark-red': hasLiked}" (click)="onClickLike()" class="far fa-heart clickable-force"></a>
+          <a [ngClass]="{'color-dark-red': hasLiked}" (click)="onClickLike()" class="far fa-heart clickable-force no-text-decoration-force"></a>
+          <a [ngClass]="{'color-dark-red': isGoing}" (click)="onClickGoing()" class="far fa-check-circle clickable-force no-text-decoration-force"></a>
         <a class="no-hover">{{singleMeeting.name}}</a>
       </h2>
       <p>{{singleMeeting.shortDescription}}</p>
@@ -17,8 +18,8 @@
   </header>
   <img class="mb-15 image featured" src="{{singleMeeting.imagePath}}" alt="" />
   <p>{{singleMeeting.fullDescription}}</p>
-  <a (click)="onClickLike()" title="Vind ik leuk!">
+  <a (click)="onClickLike()" class="no-text-decoration-force clickable-force" title="Vind ik leuk!">
     <i class="far fa-heart" [ngClass]="{'color-dark-red': hasLiked}"></i> {{likeAmount}}</a>
-  <a (click)="onClickGoing()" title="Daar ga ik heen!">
+  <a (click)="onClickGoing()" class="no-text-decoration-force clickable-force" title="Daar ga ik heen!">
     <i class="far fa-check-circle" [ngClass]="{'color-dark-red': isGoing}"></i> {{goingAmount}}</a>
 </article>
