--- a/Site/carMeets/frontend/src/app/indexPage/indexPage.component.html
+++ b/Site/carMeets/frontend/src/app/indexPage/indexPage.component.html
@@ -60,3 +60,30 @@
   <!-- Meeting -->
   <app-meeting *ngFor='let localMeeting of meetings | meetingFilter: filterMeetingName:filterDateStart:filterDateEnd:soortenMeetingsFilter' [meeting]='localMeeting'></app-meeting>
 </div>
+
+<!-- Button trigger modal -->
+<button type="button" id="modalAanmeldenVereistKnop" [hidden]="true" data-toggle="modal" data-target="#modalAanmeldenVereist" ></button>
+
+<!-- Modal: U Moet aanmelden voor deze functies -->
+<div class="modal fade" id="modalAanmeldenVereist" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title pt-20 pl-10 pb-10">Aanmelden vereist <a type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <i class="far fa-window-close color-dark-red"></i>
+        </a></h5>
+        
+      </div>
+      <div class="modal-body">
+        Om deze actie uit te voeren moet u aangemeld zijn.
+        <br>
+        <br>
+        Meld je aan of maak éénvoudig een account aan en profiteer van alle functies dat carmeets.be te offeren heeft!
+      </div>
+      <div class="modal-footer">
+        <button data-dismiss="modal" routerLink="/registreer" type="button" class="button">Registreer</button>
+        <button data-dismiss="modal" routerLink="/login" type="button" class="button">Meld aan</button>
+      </div>
+    </div>
+  </div>
+</div>
