basic layout structuur voor sectie liked en going

--- a/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.html
+++ b/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.html
@@ -19,6 +19,8 @@
               <ul class="dropdown-menu">
                   <li><a routerLink="/account"><i class="fas fa-cogs"> </i> Uw account</a></li>
                   <li><a routerLink="/account/voorkeuren"><i class="fas fa-eye"></i> Voorkeuren</a></li>
+                  <li><a routerLink="/account/likedMeetings"><i class="fas fa-heart"></i> Gelikete meetings</a></li>
+                  <li><a routerLink="/account/goingMeetings"><i class="fas fa-check-circle"></i> Events waar je heen gaat</a></li>
                   <li><a routerLink="/meetingToevoegen"><i class="fas fa-plus"> </i> Meeting toevoegen</a></li>
                   <li><a routerLink="/logout"><i class="fas fa-sign-out-alt"></i> Afmelden</a></li>
               </ul>
