--- a/Site/carMeets/frontend/src/app/user/account-page/account-submenu/account-submenu.component.html
+++ b/Site/carMeets/frontend/src/app/user/account-page/account-submenu/account-submenu.component.html
@@ -12,6 +12,16 @@
         </a>
       </li>
       <li>
+        <a routerLinkActive='color-dark-red' routerLink="/account/likedMeetings">
+          <i class="fas fa-heart"></i> Gelikete meetings
+        </a>
+      </li>
+      <li>
+        <a routerLinkActive='color-dark-red' routerLink="/account/goingMeetings">
+          <i class="fas fa-check-circle"></i> Events waar je heen gaat
+        </a>
+      </li>
+      <li>
         <a routerLinkActive='color-dark-red' routerLink="/meetingToevoegen">
           <i class="fas fa-plus"></i> Meeting toevoegen
         </a>
