liked meetings en going meetings mooi weergegeven in profiel

--- a/Site/carMeets/frontend/src/app/user/account-page/account-submenu/account-submenu.component.html
+++ b/Site/carMeets/frontend/src/app/user/account-page/account-submenu/account-submenu.component.html
@@ -18,7 +18,7 @@
       </li>
       <li>
         <a routerLinkActive='color-dark-red' routerLink="/account/goingMeetings">
-          <i class="fas fa-check-circle"></i> Events waar je heen gaat
+          <i class="fas fa-check-circle"></i> Meetings waar je heen gaat
         </a>
       </li>
       <li>
