--- a/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.css
+++ b/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.css
@@ -1,8 +1,8 @@
-#notificationsIcon .p1[data-count]:after{
+#notificationsIcon .p1[rel]:after{
     position:absolute;
     right:10%;
     top:8%;
-    content: attr(data-count);
+    content: attr(rel);
     font-size:60%;
     padding:.2em;
     border-radius:50%;
