--- a/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.html
+++ b/Site/carMeets/frontend/src/app/layout/navbar/navbar.component.html
@@ -13,18 +13,26 @@
 
       <ul *ngIf='(currentUser | async)' class="nav navbar-nav navbar-right dropdown">
         <li id="notificationsIcon">
-          <a class="nav-link font-20 pt-5 pb-0">
-            <a class="p1 fa-stack has-badge" rel="{{aantalLiked7D + aantalGoing7D}}">
-              <i class="p3 fas fa-bell fa-stack-1x xfa-inverse"></i>
-            </a>
+          <a class="nav-link dropdown-toggle font-20 pb-0 p1 fa-stack has-badge" rel="{{aantalLiked7D + aantalGoing7D}}" role="button"
+            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="p3 fas fa-bell fa-stack-1x xfa-inverse"></i>
           </a>
+          <ul class="dropdown-menu dropdown-style-lennert">
+            <h3 *ngIf='(aantalGoing7D < 1 && aantalLiked7D < 1)' class="text-center pt-10 pl-5 pr-5 pb-10 whiteText-darkBg"> Er zijn geen meetings die je volgt deze week</h3>
+            
+            <h3 *ngIf='(aantalGoing7D > 0)' routerLink="/account/goingMeetings" class="text-center pt-10 pl-5 pr-5 pb-10 whiteText-pinkBg clickable-force">{{aantalGoing7D}} Meeting(s) waar je heen gaat deze week</h3>
+
+            <h3 *ngIf='(aantalLiked7D > 0)' routerLink="/account/likedMeetings" class="text-center pt-10 pl-5 pr-5 pb-10 whiteText-darkBg clickable-force">{{aantalLiked7D}} Gelikete meeting(s) deze week</h3>
+          </ul>
         </li>
+
+
         <li>
           <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <span class="glyphicon glyphicon-user"></span> {{currentUser|async}}
             <i class="far fa-caret-square-down color-dark-red"></i>
           </a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu dropdown-style-lennert">
             <li>
               <a routerLink="/account">
                 <i class="fas fa-cogs"> </i> Uw account</a>
