--- a/Site/carMeets/frontend/src/styles.css
+++ b/Site/carMeets/frontend/src/styles.css
@@ -3,6 +3,10 @@
 
 /*---------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* Custom */
+.navbar {
+  z-index: 99;
+}
+
 .not-allowed-force {
   cursor: not-allowed !important;
 }
