--- a/Site/carMeets/frontend/src/app/user/logout/logout.component.html
+++ b/Site/carMeets/frontend/src/app/user/logout/logout.component.html
@@ -19,7 +19,7 @@
     </div>
     <div class="bumper">
       <div class="top"></div>
-      <div class="middle" data-numb="&#2348;&#2366; &#2415;&#2411; &#2330; &#2415;&#2411;&#2415;&#2411;"></div>
+      <div class="middle" data-numb="Le Nerd"></div>
       <div class="bottom"></div>
     </div>
   </div>
