clean 404 en afmeld pagina

--- a/Site/carMeets/frontend/src/app/page-not-found/page-not-found.component.html
+++ b/Site/carMeets/frontend/src/app/page-not-found/page-not-found.component.html
@@ -1,15 +1,58 @@
-<div id="clouds">
-  <div class="cloud x1"></div>
-  <div class="cloud x1_5"></div>
-  <div class="cloud x2"></div>
-  <div class="cloud x3"></div>
-  <div class="cloud x4"></div>
-  <div class="cloud x5"></div>
-</div>
 <div class='c'>
   <div class='_404'>404</div>
   <div class='_1'>PAGINA</div>
   <div class='_2'>NIET GEVONDEN</div>
-  <button class="mb-20" routerLink="/home">TERUG NAAR CARMEETS.BE</button>
+  <button class="mb-20 toForground" routerLink="/home">TERUG NAAR CARMEETS.BE</button>
   <br>
+</div>
+
+
+<div class="car">
+  <div class="body">
+    <div class="mirror-wrap">
+      <div class="mirror-inner">
+        <div class="mirror">
+          <div class="shine"></div>
+        </div>
+      </div>
+    </div>
+    <div class="middle">
+      <div class="top">
+        <div class="line"></div>
+      </div>
+      <div class="bottom">
+        <div class="lights">
+          <div class="line"></div>
+        </div>
+      </div>
+    </div>
+    <div class="bumper">
+      <div class="top"></div>
+      <div class="middle" data-numb="Le Nerd"></div>
+      <div class="bottom"></div>
+    </div>
+  </div>
+  <div class="tyres">
+    <div class="tyre back"></div>
+    <div class="tyre front"></div>
+  </div>
+</div>
+<div class="road-wrap">
+  <div class="road">
+    <div class="lane-wrap">
+      <div class="lane">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+  </div>
 </div>
