--- a/Site/carMeets/frontend/src/app/user/logout/logout.component.html
+++ b/Site/carMeets/frontend/src/app/user/logout/logout.component.html
@@ -1,3 +1,11 @@
+<div class='c'>
+    <div class='_1 pt-100'><i class="fab fa-angellist"></i></div>
+    <div class='_2'>AFGEMELD</div>
+  <button class="mb-20 toForground" routerLink="/home">TERUG NAAR CARMEETS.BE</button>
+  <br>
+</div>
+
+
 <div class="car">
   <div class="body">
     <div class="mirror-wrap">
