--- a/Site/carMeets/frontend/src/styles.css
+++ b/Site/carMeets/frontend/src/styles.css
@@ -7,6 +7,10 @@
   z-index: 99;
 }
 
+.modal {
+  max-width: 100vw;
+}
+
 .not-allowed-force {
   cursor: not-allowed !important;
 }
@@ -534,6 +538,7 @@ body {
 
 body {
   background: #f4f4f4;
+  word-wrap: break-word;
 }
 
 body.is-loading *,
