--- a/Site/carMeets/frontend/src/app/indexPage/indexPage.component.html
+++ b/Site/carMeets/frontend/src/app/indexPage/indexPage.component.html
@@ -45,7 +45,7 @@
   </section>
 
   <!-- About -->
-  <section class="blurb text-center">
+  <section class="blurb text-center visible-lg">
     <h2>Over CarMeets.be</h2>
     <p>Net zoals vele autoliefhebbers was ik het beu steeds te moeten horen dat ik weer een kwaliteitsmeeting gemist had omdat
       ik niet wist wanneer deze plaatsvond. Daarom besloot ik,
