--- a/Site/carMeets/frontend/src/styles.css
+++ b/Site/carMeets/frontend/src/styles.css
@@ -106,6 +106,7 @@ hr.cleanPinkSeperator {
 
 .color-dark-red {
   color: #e8175d;
+  transition: color 0.3s ease;
 }
 
 .color-light-red {
@@ -569,19 +570,19 @@ textarea {
 }
 
 a {
-  -moz-transition: color 0.2s ease, border-bottom-color 0.2s ease;
-  -webkit-transition: color 0.2s ease, border-bottom-color 0.2s ease;
-  -ms-transition: color 0.2s ease, border-bottom-color 0.2s ease;
-  transition: color 0.2s ease, border-bottom-color 0.2s ease;
+  -moz-transition: color 0.3s ease, border-bottom-color 0.2s ease;
+  -webkit-transition: color 0.3ss ease, border-bottom-color 0.2s ease;
+  -ms-transition: color 0.3s ease, border-bottom-color 0.2s ease;
+  transition: color 0.3s ease, border-bottom-color 0.2s ease;
   color: inherit;
   text-decoration: none;
 }
 
 a:before {
-  -moz-transition: color 0.2s ease;
-  -webkit-transition: color 0.2s ease;
-  -ms-transition: color 0.2s ease;
-  transition: color 0.2s ease;
+  -moz-transition: color 0.3s ease;
+  -webkit-transition: color 0.3s ease;
+  -ms-transition: color 0.3s ease;
+  transition: color 0.3s ease;
 }
 
 a:hover {
