--- a/Site/carMeets/frontend/src/app/user/login-page/login/login.component.html
+++ b/Site/carMeets/frontend/src/app/user/login-page/login/login.component.html
@@ -12,7 +12,7 @@
   <div *ngIf='errorMsg' class="text-center text-danger">{{errorMsg}}</div>
   <!-- momenteel enkel met username mogelijkheid aan te melden -->
   <div class="wrap-input100">
-    <input class="input100" type="text" id="username" formControlName='username' placeholder="gebruikersnaam">
+    <input class="input100" type="text" id="username" formControlName='username' placeholder="gebruikersnaam of e-mail">
     <span class="focus-input100"></span>
     <span class="symbol-input100">
       <i class="fa fa-envelope" aria-hidden="true"></i>
