--- a/Site/carMeets/frontend/src/styles.css
+++ b/Site/carMeets/frontend/src/styles.css
@@ -3,6 +3,11 @@
 
 /*---------------------------------------------------------------------------------------------------------------------------------------------------*/
 /* Custom */
+.goodlabel{
+  display: inline !important;
+  font-weight: normal !important;
+}
+
 .navbar {
   z-index: 99;
 }
