Dummy Data en small fixes

--- a/Site/carMeets/frontend/src/app/user/account-page/add-meeting-page/add-meeting-page.component.html
+++ b/Site/carMeets/frontend/src/app/user/account-page/add-meeting-page/add-meeting-page.component.html
@@ -123,8 +123,7 @@
         <label class="addmeeting100-form-btn" id="thumbSelection">
           <a id="thumbTekst">Selecteer 1 thumbnail afbeelding (16:9 / max 500kb)*.
           </a>
-          <input type="file" accept=".jpg" (change)="onImgUploadChange($event)" name="afbeelding" id="thumbToUpload"
-            style="display: none;">
+          <input type="file" accept=".jpg" (change)="onImgUploadChange($event)" name="afbeelding" id="thumbToUpload" style="display: none;">
         </label>
       </div>
 
@@ -132,12 +131,14 @@
         <h4>Kies alle passende categorieën*</h4>
         <div *ngIf='categoryErrorMsg != ""' class="text-center text-danger">{{categoryErrorMsg}}</div>
         <div *ngFor="let keuze of soortenMeetings">
-          <a class="col-md-4">
-            <input type="checkbox" name="categorie" [value]="keuze" (change)="onCheckChange($event)">{{keuze}}</a>
+          <div class="col-md-4 mt-0 ml-0 mr-0 mb-0">
+            <input type="checkbox" name="categorie" id="{{keuze}}" [value]="keuze" (change)="onCheckChange($event)">
+            <label class="goodlabel" for="{{keuze}}">{{keuze}}</label>
+          </div>
         </div>
       </div>
 
-      
+
       <div class="container-addmeeting100-form-btn input100Max600px center-block" [ngClass]="{'not-allowed-force':!newMeetingFormGroup.valid}">
         <button type='submit' [disabled]='!newMeetingFormGroup.valid' id='chnangePasswordBtn' class="addmeeting100-form-btn">
           Voeg meeting toe
