--- a/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
+++ b/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
@@ -2,8 +2,8 @@
   <header>
     <div class="title">
       <h2>
-          <a [ngClass]="{'color-dark-red': hasLiked}" (click)="onClickLike()" class="far fa-heart clickable-force no-text-decoration-force"></a>
-          <a [ngClass]="{'color-dark-red': isGoing}" (click)="onClickGoing()" class="far fa-check-circle clickable-force no-text-decoration-force"></a>
+        <a [ngClass]="{'color-dark-red': hasLiked}" (click)="onClickLike()" class="far fa-heart clickable-force no-text-decoration-force"></a>
+        <a [ngClass]="{'color-dark-red': isGoing}" (click)="onClickGoing()" class="far fa-check-circle clickable-force no-text-decoration-force"></a>
         <a class="no-hover">{{singleMeeting.name}}</a>
       </h2>
       <p>{{singleMeeting.shortDescription}}</p>
@@ -19,6 +19,11 @@
   <img class="mb-15 image featured" src="{{singleMeeting.imagePath}}" alt="" />
   <p>{{singleMeeting.fullDescription}}</p>
 
-  <a class="button" href="https://calendar.google.com/calendar/r/eventedit?text={{singleMeeting.name.replace(' ', '%20')}}&dates={{singleMeeting.date | date : 'yyyyMMdd'}}/{{date1DagLater | date : 'yyyyMMdd'}}&details={{singleMeeting.shortDescription.replace(' ', '%20') +'%0A%0AToegevoegd%20via%20carmeets.be'}}&location={{singleMeeting.straatnaam.replace(' ', '%20')}}%20{{singleMeeting.straatnr.replace(' ', '%20')}},%20{{singleMeeting.postcode.replace(' ', '%20')}}%20{{singleMeeting.gemeente.replace(' ', '%20')}}" target="_blank"><i class="fab fa-google"></i> opslaan in agenda</a>
-  <a *ngIf="showDelete()" (click)="onClickDelete()" class="button"><i class="fas fa-trash"></i>Delete deze meeting</a>
+  <a *ngIf="singleMeeting.site" href="{{singleMeeting.site}}" target="_blank" class="button">
+    <i class="fas fa-globe"></i> Bezoek de website</a>
+  <a class="button" href="{{getGoogleCalanderUrl()}}"
+    target="_blank">
+    <i class="fab fa-google"></i> Opslaan in agenda</a>
+  <a *ngIf="showDelete()" (click)="onClickDelete()" class="button">
+    <i class="fas fa-trash"></i> Delete deze meeting</a>
 </article>
