--- a/Site/carMeets/frontend/src/app/meeting/meeting.component.html
+++ b/Site/carMeets/frontend/src/app/meeting/meeting.component.html
@@ -20,7 +20,7 @@
     </a>
   </div>
   <div class="col-lg-3 visible-lg text-right">
-    <p class="mb-5">Categoriën:</p>
+    <h3 class="mb-5">Categoriën:</h3>
     <div dir="rtl">
       <li *ngFor="let categorie of drieCategorien">
         <app-category [name]="categorie"></app-category>
