categorie mooier op detail

--- a/Site/carMeets/frontend/src/app/meeting/meeting.component.html
+++ b/Site/carMeets/frontend/src/app/meeting/meeting.component.html
@@ -1,4 +1,4 @@
-<article class="post" [@scrollAnimation]="state">
+<article class="post clearfix" [@scrollAnimation]="state">
   <header>
     <div class="title">
       <h2>
