--- a/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
+++ b/Site/carMeets/frontend/src/app/detail-page/single-meeting/single-meeting.component.html
@@ -23,13 +23,15 @@
   <div>
     <h3>Categoriën:</h3>
     <li class="col-lg-3 col-md-4 col-xs-6" *ngFor="let categorie of singleMeeting.categories">
-      {{categorie}}  
+      {{categorie}}
     </li>
   </div>
 
   <div class="col-xs-12 mt-20">
     <a *ngIf="singleMeeting.site" href="{{singleMeeting.site}}" target="_blank" class="button width-100percent-980LG mb-10">
       <i class="fas fa-globe"></i> Bezoek de website</a>
+    <a class="button width-100percent-980LG mb-10" href="{{getGoogleDirectionUrl()}}" target="_blank">
+      <i class="fas fa-location-arrow"></i> Route berekenen</a>
     <a class="button width-100percent-980LG mb-10" href="{{getGoogleCalanderUrl()}}" target="_blank">
       <i class="fab fa-google"></i> Opslaan in agenda</a>
     <a *ngIf="showDelete()" (click)="onClickDelete()" class="button width-100percent-980LG mb-10">
